[tool.poetry]
name = "daylio-stats"
version = "1.0.0"
description = "A Django web app to generate stats from Daylio exports"
authors = ["Meesha <44530786+meesha7@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22"
matplotlib = "^3.4"
Django = "^3.2"
gunicorn = "^22.0.0"
whitenoise = "^5.2.0"
django-dotenv = "^1.4.2"
django-extensions = "^3.1.1"
daylio-parser = "0.2.0"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
green = "^3.4.2"
pycodestyle = "^2.8.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
